--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
     <script src="js/dataManager.js"></script>
     <script src="js/ui.js"></script>
     <script src="js/actions.js"></script>
+    <script src="js/combat.js"></script>
     <script src="js/scenes.js"></script>
     <script src="js/game.js"></script>
     <script src="js/main.js"></script>
